Fix layout issues

--- a/index.css
+++ b/index.css
@@ -182,7 +182,7 @@ a[href]{
     display:flex;
     flex-direction:column;
     gap:0.5rem;
-    padding-top:0.5rem;
+    padding-top:4vh;
    
  }
 
